<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <EditText
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_text"
        android:textColor="#00FF00"
        android:textColorHint="#006400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/keyStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Key Strength: N/A"
        android:textColor="#00FF00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText" />

    <EditText
        android:id="@+id/keyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/key"
        android:textColor="#00FF00"
        android:textColorHint="#006400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyStrength" />

    <Button
        android:id="@+id/saveKeyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_key"
        android:textColor="#000000"
        android:backgroundTint="#00FF00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyText" />

    <Button
        android:id="@+id/qrScanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_scan"
        android:textColor="#000000"
        android:backgroundTint="#00FF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyText" />

    <Button
        android:id="@+id/nfcShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfc_share"
        android:textColor="#000000"
        android:backgroundTint="#00FF00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveKeyButton" />

    <Spinner
        android:id="@+id/hashSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/hash_types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nfcShareButton" />

    <Button
        android:id="@+id/encryptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"
        android:textColor="#000000"
        android:backgroundTint="#00FF00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hashSpinner" />

    <Button
        android:id="@+id/decryptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt"
        android:textColor="#000000"
        android:backgroundTint="#00FF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hashSpinner" />

    <Button
        android:id="@+id/hashButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hash"
        android:textColor="#000000"
        android:backgroundTint="#00FF00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encryptButton" />

    <Button
        android:id="@+id/stegoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stego"
        android:textColor="#000000"
        android:backgroundTint="#00FF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decryptButton" />

    <Button
        android:id="@+id/qrExportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_export"
        android:textColor="#000000"
        android:backgroundTint="#00FF00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hashButton" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/output"
        android:textColor="#00FF00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrExportButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
