<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <EditText
        android:id="@+id/filePath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter file path"
        android:textColor="#00FF00"
        android:textColorHint="#006400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/keyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/key"
        android:textColor="#00FF00"
        android:textColorHint="#006400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filePath" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyText" />

    <Button
        android:id="@+id/encryptFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"
        android:textColor="#000000"
        android:backgroundTint="#00FF00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/decryptFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt"
        android:textColor="#000000"
        android:backgroundTint="#00FF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>
